# openCV_demo

./: Canny.cpp  Gaussian.cpp  Sobel.cpp
edge/: Bilateralfilter.cpp  Bilateralfilter2.cpp  CMakeLists.txt  EdgeEnhancement.cpp  Laplacian.cpp  UnsharpMasking.cpp  example.cpp  median.cpp
